--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -98,7 +98,7 @@
     border-radius: 35px;
     padding: 15px 25px;
     letter-spacing: 2px;
-    
+    outline: none;
     font-size: 16px;
     border: none;
 }
@@ -113,12 +113,14 @@
 {
     background-color: var(--main-color);
     color:black;
+    outline: none;
 }
 
 .btnDwl
 {
     background-color: var(--main-color);
     color: black;
+    outline: none;
 }
 
 @media screen and (max-width: 1205px)
