--- a/src/Styles/Portofolio.css
+++ b/src/Styles/Portofolio.css
@@ -130,6 +130,7 @@
 
 .Icons i:hover
 {
+    outline: none;
     filter: brightness(100%);
 }
 
@@ -156,6 +157,7 @@
 }
 
 .Card:hover .Card-inner {
+    outline: none;
     transform: rotateY(180deg);
   }
 
@@ -195,14 +197,14 @@
     .Card figure
     {
         width: 270px;
-        height: 390px;
+        height: 450px;
         padding: 15px;
     }
 
     .Card
     {
         width: 330px;
-        height: 420px;
+        height: 490px;
         padding: 30px;
         margin-left: 20px;
     }
@@ -300,14 +302,14 @@
     .Card figure
     {
         width: 250px;
-        height: 400px;
+        height: 430px;
         padding: 15px;
     }
 
     .Card
     {
         width: 300px;
-        height: 440px;
+        height: 460px;
         padding: 10px;
     }
         
